matched hyperparameters and tunign as first notebook (for paper comparison purposes)

--- a/cross_asset.ipynb
+++ b/cross_asset.ipynb
@@ -1347,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2354,20 +2354,103 @@
     "                print(f\"  Linear model failed: {e}\")\n",
     "                model_predictions['Linear'] = None\n",
     "            \n",
-    "            # 2. Random Forest (improved hyperparameters)\n",
+    "            # 2. Random Forest with Hyperparameter Tuning (matching main.ipynb)\n",
     "            try:\n",
-    "                # Remove arbitrary max_depth constraint - let trees grow naturally\n",
-    "                # RF with deep trees + many estimators rarely overfits\n",
-    "                rf_model = RandomForestRegressor(\n",
-    "                    n_estimators=200,  # More trees for better performance\n",
-    "                    max_depth=None,  # Let trees grow naturally (no artificial constraint)\n",
-    "                    min_samples_leaf=5,  # Prevent overfitting at leaf level\n",
-    "                    random_state=42,\n",
-    "                    n_jobs=-1\n",
-    "                )\n",
-    "                rf_model.fit(X_train, y_train)\n",
-    "                rf_pred_test = rf_model.predict(X_test)\n",
-    "                model_predictions['RandomForest'] = rf_pred_test\n",
+    "                import random\n",
+    "                random.seed(42)\n",
+    "                np.random.seed(42)\n",
+    "                \n",
+    "                # Define parameter grid (matching main.ipynb)\n",
+    "                param_grid = {\n",
+    "                    'n_estimators': [50, 100, 200, 300, 500],\n",
+    "                    'max_depth': [3, 5, 10, 15, 20, 25, None],\n",
+    "                    'min_samples_split': [2, 5, 10, 20],\n",
+    "                    'min_samples_leaf': [1, 2, 4, 8],\n",
+    "                    'max_features': ['sqrt', 'log2', None]\n",
+    "                }\n",
+    "                \n",
+    "                # Generate all combinations\n",
+    "                all_combinations = []\n",
+    "                for n_est in param_grid['n_estimators']:\n",
+    "                    for max_d in param_grid['max_depth']:\n",
+    "                        for min_split in param_grid['min_samples_split']:\n",
+    "                            for min_leaf in param_grid['min_samples_leaf']:\n",
+    "                                for max_feat in param_grid['max_features']:\n",
+    "                                    all_combinations.append({\n",
+    "                                        'n_estimators': n_est,\n",
+    "                                        'max_depth': max_d,\n",
+    "                                        'min_samples_split': min_split,\n",
+    "                                        'min_samples_leaf': min_leaf,\n",
+    "                                        'max_features': max_feat\n",
+    "                                    })\n",
+    "                \n",
+    "                # Sample 150 random combinations (matching main.ipynb)\n",
+    "                sampled_combinations = random.sample(all_combinations, min(150, len(all_combinations)))\n",
+    "                \n",
+    "                print(f\"  Testing {len(sampled_combinations)} Random Forest parameter combinations...\")\n",
+    "                \n",
+    "                best_score = -np.inf\n",
+    "                best_params = None\n",
+    "                best_model = None\n",
+    "                \n",
+    "                # Use TimeSeriesSplit for validation (matching main.ipynb approach)\n",
+    "                tscv = TimeSeriesSplit(n_splits=3)\n",
+    "                \n",
+    "                for i, params in enumerate(sampled_combinations):\n",
+    "                    try:\n",
+    "                        rf = RandomForestRegressor(\n",
+    "                            n_estimators=params['n_estimators'],\n",
+    "                            max_depth=params['max_depth'],\n",
+    "                            min_samples_split=params['min_samples_split'],\n",
+    "                            min_samples_leaf=params['min_samples_leaf'],\n",
+    "                            max_features=params['max_features'],\n",
+    "                            random_state=42,\n",
+    "                            n_jobs=-1\n",
+    "                        )\n",
+    "                        \n",
+    "                        # Cross-validate on training set\n",
+    "                        cv_scores = []\n",
+    "                        for train_idx, val_idx in tscv.split(X_train):\n",
+    "                            X_train_cv, X_val_cv = X_train[train_idx], X_train[val_idx]\n",
+    "                            y_train_cv, y_val_cv = y_train[train_idx], y_train[val_idx]\n",
+    "                            \n",
+    "                            rf.fit(X_train_cv, y_train_cv)\n",
+    "                            val_pred = rf.predict(X_val_cv)\n",
+    "                            val_r2 = r2_score(y_val_cv, val_pred)\n",
+    "                            cv_scores.append(val_r2)\n",
+    "                        \n",
+    "                        avg_cv_score = np.mean(cv_scores)\n",
+    "                        \n",
+    "                        # Track best model\n",
+    "                        if avg_cv_score > best_score:\n",
+    "                            best_score = avg_cv_score\n",
+    "                            best_params = params\n",
+    "                            # Refit on full training set\n",
+    "                            best_model = RandomForestRegressor(\n",
+    "                                n_estimators=params['n_estimators'],\n",
+    "                                max_depth=params['max_depth'],\n",
+    "                                min_samples_split=params['min_samples_split'],\n",
+    "                                min_samples_leaf=params['min_samples_leaf'],\n",
+    "                                max_features=params['max_features'],\n",
+    "                                random_state=42,\n",
+    "                                n_jobs=-1\n",
+    "                            )\n",
+    "                            best_model.fit(X_train, y_train)\n",
+    "                            \n",
+    "                    except Exception as e:\n",
+    "                        continue\n",
+    "                \n",
+    "                if best_model is not None:\n",
+    "                    rf_pred_test = best_model.predict(X_test)\n",
+    "                    model_predictions['RandomForest'] = rf_pred_test\n",
+    "                    print(f\"  Best RF params: {best_params}, CV R²: {best_score:.4f}\")\n",
+    "                else:\n",
+    "                    print(f\"  RandomForest hyperparameter search failed, using default\")\n",
+    "                    rf_model = RandomForestRegressor(n_estimators=200, random_state=42, n_jobs=-1)\n",
+    "                    rf_model.fit(X_train, y_train)\n",
+    "                    rf_pred_test = rf_model.predict(X_test)\n",
+    "                    model_predictions['RandomForest'] = rf_pred_test\n",
+    "                    \n",
     "            except Exception as e:\n",
     "                print(f\"  RandomForest model failed: {e}\")\n",
     "                model_predictions['RandomForest'] = None\n",
@@ -2413,87 +2496,128 @@
     "                print(f\"  HAR-X model failed: {e}\")\n",
     "                model_predictions['HAR-X'] = None\n",
     "            \n",
-    "            # 5. Neural Network (simplified)\n",
+    "            # 5. Neural Network (matching main.ipynb architecture and training)\n",
     "            try:\n",
     "                device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "                scaler_X_nn = StandardScaler()\n",
     "                scaler_y_nn = StandardScaler()\n",
     "                \n",
     "                X_train_scaled = scaler_X_nn.fit_transform(X_train)\n",
+    "                X_val_scaled = scaler_X_nn.transform(X_val)\n",
     "                X_test_scaled = scaler_X_nn.transform(X_test)\n",
     "                y_train_scaled = scaler_y_nn.fit_transform(y_train.reshape(-1, 1)).flatten()\n",
-    "                \n",
-    "                class SimpleNN(nn.Module):\n",
-    "                    def __init__(self, input_dim):\n",
-    "                        super().__init__()\n",
-    "                        self.net = nn.Sequential(\n",
-    "                            nn.Linear(input_dim, 64),\n",
-    "                            nn.ReLU(),\n",
-    "                            nn.Linear(64, 32),\n",
-    "                            nn.ReLU(),\n",
-    "                            nn.Linear(32, 1)\n",
-    "                        )\n",
-    "                    def forward(self, x):\n",
-    "                        return self.net(x).squeeze()\n",
-    "                \n",
-    "                nn_model = SimpleNN(X_train_scaled.shape[1]).to(device)\n",
-    "                optimizer = optim.Adam(nn_model.parameters(), lr=0.001)\n",
-    "                criterion = nn.MSELoss()\n",
-    "                \n",
-    "                X_train_tensor = torch.FloatTensor(X_train_scaled).to(device)\n",
-    "                y_train_tensor = torch.FloatTensor(y_train_scaled).to(device)\n",
-    "                X_test_tensor = torch.FloatTensor(X_test_scaled).to(device)\n",
-    "                \n",
-    "                # Prepare validation data\n",
-    "                X_val_scaled = scaler_X_nn.transform(X_val)\n",
     "                y_val_scaled = scaler_y_nn.transform(y_val.reshape(-1, 1)).flatten()\n",
-    "                X_val_tensor = torch.FloatTensor(X_val_scaled).to(device)\n",
-    "                y_val_tensor = torch.FloatTensor(y_val_scaled).to(device)\n",
     "                \n",
-    "                # Proper training with early stopping and validation monitoring\n",
+    "                # VolatilityNet architecture (matching main.ipynb)\n",
+    "                class VolatilityNet(nn.Module):\n",
+    "                    \"\"\"\n",
+    "                    Shallow Multi-Layer Perceptron (MLP) for volatility forecasting.\n",
+    "                    Architecture: Input -> [128, 64, 32, 16] -> Output (matching main.ipynb)\n",
+    "                    \"\"\"\n",
+    "                    def __init__(self, input_dim, hidden_dims=[128, 64, 32, 16], dropout_rate=0.3):\n",
+    "                        super(VolatilityNet, self).__init__()\n",
+    "                        layers = []\n",
+    "                        prev_dim = input_dim\n",
+    "                        \n",
+    "                        for hidden_dim in hidden_dims:\n",
+    "                            layers.append(nn.Linear(prev_dim, hidden_dim))\n",
+    "                            layers.append(nn.BatchNorm1d(hidden_dim))\n",
+    "                            layers.append(nn.ReLU())\n",
+    "                            layers.append(nn.Dropout(dropout_rate))\n",
+    "                            prev_dim = hidden_dim\n",
+    "                        \n",
+    "                        # Output layer\n",
+    "                        layers.append(nn.Linear(prev_dim, 1))\n",
+    "                        \n",
+    "                        self.network = nn.Sequential(*layers)\n",
+    "                    \n",
+    "                    def forward(self, x):\n",
+    "                        return self.network(x).squeeze()\n",
+    "                \n",
+    "                input_dim = X_train_scaled.shape[1]\n",
+    "                nn_model = VolatilityNet(input_dim=input_dim, hidden_dims=[128, 64, 32, 16], dropout_rate=0.3).to(device)\n",
+    "                \n",
+    "                # Loss function and optimizer (matching main.ipynb)\n",
+    "                criterion = nn.MSELoss()\n",
+    "                optimizer = optim.Adam(nn_model.parameters(), lr=0.001, weight_decay=1e-5)\n",
+    "                scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.5, patience=10, verbose=False)\n",
+    "                \n",
+    "                # Training parameters (matching main.ipynb)\n",
+    "                num_epochs = NN_EPOCHS\n",
+    "                batch_size = NN_BATCH_SIZE\n",
+    "                patience = NN_PATIENCE\n",
     "                best_val_loss = float('inf')\n",
     "                patience_counter = 0\n",
-    "                patience = NN_PATIENCE\n",
     "                best_model_state = None\n",
+    "                best_epoch = 0\n",
     "                \n",
-    "                for epoch in range(NN_EPOCHS):\n",
-    "                    # Training step\n",
+    "                # Convert to tensors\n",
+    "                X_train_tensor = torch.FloatTensor(X_train_scaled).to(device)\n",
+    "                y_train_tensor = torch.FloatTensor(y_train_scaled).to(device)\n",
+    "                X_val_tensor = torch.FloatTensor(X_val_scaled).to(device)\n",
+    "                y_val_tensor = torch.FloatTensor(y_val_scaled).to(device)\n",
+    "                X_test_tensor = torch.FloatTensor(X_test_scaled).to(device)\n",
+    "                \n",
+    "                # Training loop with batch training (matching main.ipynb)\n",
+    "                for epoch in range(num_epochs):\n",
     "                    nn_model.train()\n",
-    "                    optimizer.zero_grad()\n",
-    "                    outputs = nn_model(X_train_tensor)\n",
-    "                    loss = criterion(outputs, y_train_tensor)\n",
-    "                    loss.backward()\n",
-    "                    optimizer.step()\n",
+    "                    train_loss = 0.0\n",
+    "                    num_batches = 0\n",
     "                    \n",
-    "                    # Validation monitoring (every 5 epochs to save time)\n",
-    "                    if epoch % 5 == 0 or epoch == 0:\n",
-    "                        nn_model.eval()\n",
-    "                        with torch.no_grad():\n",
-    "                            val_outputs = nn_model(X_val_tensor)\n",
-    "                            val_loss = criterion(val_outputs, y_val_tensor).item()\n",
+    "                    # Mini-batch training using DataLoader (matching main.ipynb)\n",
+    "                    train_dataset = torch.utils.data.TensorDataset(X_train_tensor, y_train_tensor)\n",
+    "                    train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "                    \n",
+    "                    for batch_X, batch_y in train_loader:\n",
+    "                        optimizer.zero_grad()\n",
+    "                        outputs = nn_model(batch_X)\n",
+    "                        loss = criterion(outputs, batch_y)\n",
+    "                        loss.backward()\n",
+    "                        torch.nn.utils.clip_grad_norm_(nn_model.parameters(), max_norm=1.0)  # Gradient clipping\n",
+    "                        optimizer.step()\n",
     "                        \n",
-    "                        if val_loss < best_val_loss:\n",
-    "                            best_val_loss = val_loss\n",
-    "                            best_model_state = nn_model.state_dict().copy()\n",
-    "                            patience_counter = 0\n",
-    "                        else:\n",
-    "                            patience_counter += 1\n",
-    "                        \n",
-    "                        # Early stopping\n",
-    "                        if patience_counter >= patience:\n",
-    "                            break\n",
+    "                        train_loss += loss.item()\n",
+    "                        num_batches += 1\n",
+    "                    \n",
+    "                    avg_train_loss = train_loss / num_batches if num_batches > 0 else train_loss\n",
+    "                    \n",
+    "                    # Validation monitoring (every epoch, matching main.ipynb)\n",
+    "                    nn_model.eval()\n",
+    "                    with torch.no_grad():\n",
+    "                        val_outputs = nn_model(X_val_tensor)\n",
+    "                        val_loss = criterion(val_outputs, y_val_tensor).item()\n",
+    "                    \n",
+    "                    # Learning rate scheduling\n",
+    "                    scheduler.step(val_loss)\n",
+    "                    \n",
+    "                    # Track best model\n",
+    "                    if val_loss < best_val_loss:\n",
+    "                        best_val_loss = val_loss\n",
+    "                        best_model_state = nn_model.state_dict().copy()\n",
+    "                        best_epoch = epoch\n",
+    "                        patience_counter = 0\n",
+    "                    else:\n",
+    "                        patience_counter += 1\n",
+    "                    \n",
+    "                    # Early stopping\n",
+    "                    if patience_counter >= patience:\n",
+    "                        break\n",
     "                \n",
     "                # Load best model based on validation performance\n",
     "                if best_model_state is not None:\n",
     "                    nn_model.load_state_dict(best_model_state)\n",
     "                \n",
+    "                # Final prediction on test set\n",
     "                nn_model.eval()\n",
     "                with torch.no_grad():\n",
     "                    nn_pred_test_scaled = nn_model(X_test_tensor).cpu().numpy()\n",
     "                nn_pred_test = scaler_y_nn.inverse_transform(nn_pred_test_scaled.reshape(-1, 1)).flatten()\n",
     "                model_predictions['NeuralNetwork'] = nn_pred_test\n",
+    "                \n",
     "            except Exception as e:\n",
     "                print(f\"  Neural Network model failed: {e}\")\n",
+    "                import traceback\n",
+    "                traceback.print_exc()\n",
     "                model_predictions['NeuralNetwork'] = None\n",
     "            \n",
     "            # 6. GARCH and EGARCH (rolling forecasts on test set) - CORRECTED\n",
